--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    font-family: 'Poppins', sans-serif;
+}
+
+.warna-color {
+    color: #70a43c;
+}
+.warna-bg {
+    background: #70a43c;
+}
